<resources>
    <string name="app_name">ProjetoApp</string>
    <string name="splachHotel">Hotel</string>
    <string name="splachCity">City</string>
    <string name="BemVindo">Bem-vindo</string>
    <string name="TxtBtnBemVindo">Próximo</string>
    <string name="TextTelaBemVindo">Aqui você encontrará as melhores opções de hospedagem para a sua viagem, seja ela a negócios ou para se divertir com a familia</string>
    <string name="TxtEmail">Email</string>
    <string name="Txtsenha">Senha</string>
    <string name="TxtBtnLogar">Entrar</string>
    <string name="TxtLogin">Login</string>
    <string name="TxtLoginBemVindo">Seja Bem-vindo!</string>
    <string name="TxtFormaDeLogin">Entre Com</string>
    <string name="TxtOu">OU</string>
    <string name="TxtShowSenha">Mostrar senha</string>
    <string name="TxtOlaMikhail">Olá, Mikhail!</string>
    <string name="TxtSubtitleHome">Escolha onde deseja se hospedar.</string>
    <string name="TxtBarraPesquisa">Pesquise um destino</string>
    <string name="TxtRecomendados">Recomendados</string>
    <string name="TxtLegendaRecomendados">Hotéis que lhe oferecem mais flexibilidade.</string>
    <string name="TxtVerMais">Ver Mais</string>
    <string name="TxtContaOuLogin">Criar conta ou fazer login</string>
    <string name="TxtViagens">Viagens</string>
    <string name="TxtHome">Início</string>
    <string name="TxtConta">Conta</string>
    <string name="TxtProcurar">Procurar por um destino</string>
    <string name="TxtOrdenarFiltrar">Ordenar e filtrar</string>
    <string name="TxtLimpar">Limpar</string>
    <string name="TxtOrdenarPor">Ordenar por</string>
    <string name="TxtBuscaPorNome">Busca por nome do estabelecimento</string>
    <string name="TxtHotelHilton">por ex. Hotel Hilton</string>
    <string name="TxtFiltrarPor">Filtrar por</string>
    <string name="TxtOrcamento">Seu orçamento</string>
    <string name="TxtClassPorEstr">Classificação por estrelas</string>
    <string name="TxtTipoPag">Tipo de pagamento</string>
    <string name="TxtCancelGratis">Cancelamento grátis</string>
    <string name="TxtReservePagDeps">Reserve agora, pague depois</string>
    <string name="TxtTipoEst">Tipo de estabelecimento</string>
    <string name="TxtPousada">Pousada</string>
    <string name="TxtResort">Resort</string>
    <string name="TxtChale">Chalé</string>
    <string name="TxtMotel">Motel</string>
    <string name="TxtApart">Apartamento</string>
    <string name="TxtCasa">Casa particular</string>
    <string name="TxtArea">Área</string>
    <string name="TxtSP">São Paulo</string>
    <string name="TxtLocalPop">Locais populares</string>
    <string name="TxtTodos">Todos</string>
    <string name="TxtComodidades">Comodidades</string>
    <string name="TxtCafeIncl">Café da manhã incluído</string>
    <string name="TxtWiFi">Wi-Fi grátis</string>
    <string name="TxtEstacIncl">Estacionamento incluído</string>
    <string name="TxtPiscina">Piscina</string>
    <string name="TxtSpa">Spa</string>
    <string name="TxtAceitaAnimais">Aceita animais de estimação</string>
    <string name="TxtArCond">Ar-condicionado</string>
    <string name="TxtCozinha">Cozinha</string>
    <string name="TxtCassino">Cassino</string>
    <string name="TxtParqAqua">Parque aquático</string>
    <string name="TxtVistaMar">Vista para o mar</string>
    <string name="TxtLavSec">Lavadora e secadora</string>
    <string name="TxtAcess">Acessibilidade</string>
    <string name="TxtBanhAcess">Banheiro acessível</string>
    <string name="TxtChuvBarra">Chuveiro com barras de apoio</string>
    <string name="TxtQuartoAcess">Quartos acessíveis</string>
    <string name="TxtExp">Experiência do viajante</string>
    <string name="TxtNegocios">Ideal para negócios</string>
    <string name="TxtFamilia">Ideal para famílias</string>
    <string name="TxtDisp">Disponibilidade</string>
    <string name="TxtOnlyDisp">Mostrar apenas estabelecimentos disponíveis</string>
    <string name="TxtOK">OK</string>
    <string name="TxtZERO">R$ 0</string>
    <string name="TxtOITOMAIS">R$800+</string>
    <string name="TxtUM">1</string>
    <string name="TxtDOIS">2</string>
    <string name="TxtTRES">3</string>
    <string name="TxtQUATRO">4</string>
    <string name="TxtCINCO">5</string>
    <string-array name="exibOrdlist">
        <item>Recomendados</item>
        <item>Preço</item>
        <item>Melhores ofertas</item>
        <item>Classificação por estrelas</item>
        <item>Distância do centro da cidade</item>
    </string-array>
    <string-array name="exibArealist">
        <item>São Paulo</item>
        <item>Santo Amaro</item>
        <item>Tatuapé</item>
        <item>Barra Funda</item>
        <item>Alphaville</item>
        <item>Moema</item>
        <item>Vila Mariana</item>
        <item>Itaim Bibi</item>
        <item>Zona Central</item>
        <item>Itaquera</item>
        <item>Osasco</item>
        <item>Estação Perus de São Paulo</item>
        <item>Jardins</item>
        <item>Brás</item>
        <item>Guarulhos</item>
        <item>Santo André</item>
        <item>Interlagos</item>
        <item>Mogi das Cruzes</item>
    </string-array>
    <string-array name="exibLocalPoplist">
        <item>Todos</item>
        <item>Magic City</item>
        <item>Parque Ibirapuera</item>
        <item>Avenida Paulista</item>
        <item>Shopping Eldorado</item>
        <item>Estádio do Morumbi</item>
        <item>Shopping do Center Norte</item>
        <item>Shopping Morumbi</item>
        <item>Rua 25 de Março</item>
        <item>Shoppig Metro Santa Cruz</item>
    </string-array>
    <string name="TxtNomeHotel">Hotel Dois Rios</string>
    <string name="TxtLocHotel">Av.Dos Engenheiros 600 - São Paulo,SP</string>
    <string name="TxtNotaHotel">3.2-bom</string>
    <string name="TxtTelHotel">40246-2544</string>
    <string name="TxtBtnReserva">Reservar</string>
    <string name="TxtValorHotel">R$: 124</string>
    <string name="TxtInformacoes">Informações</string>
    <string name="TxtInfoHotel">Este hotel possui quartos confortáveis com uma ótima vista, perto dos melhores pontos turisticos de SP. Perfeito para viagens a negócios ou a turismo.</string>
    <string name="TxtHotelQuarto">Quarto</string>
    <string name="TxtdetalhesQuarto">Suit, com 1 cama e acomoda 2 pessoas</string>
    <string name="TxtSevisos1">Serviço de Quarto</string>
    <string name="TxtSevisos2">Restaurante</string>
    <string name="TxtSevisos3">Piscina</string>
    <string name="TxtSevisos4">Ar-condicionado</string>
    <string name="TxtSevisos5">Acessebilidade</string>
    <string name="TxtHotel">Hotéis recomendados</string>
    <string name="TxtSubHotelResult">Uma ótima seleção de hóteis que oferecem boa qualidade e cancelamento grátis caso seus planos mudem.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tela_login">TelaLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="descImgLogo">Sinal de sino de hotel-logo</string>
    <string name="descImgIconViajante">Icon de uma pessoa com mala</string>
    <string name="descImgLogoFacebook">Logo Facebook</string>
    <string name="descImgLogoGoogle">Logo Google</string>
    <string name="descImgHotel">Quarto de hotel</string>
    <string name="descImgEstrela">Icon estrela</string>
    <string name="descImgtelefone">Icon Telefone</string>
    <string name="descImgLocalizacao">Icon Localização</string>
    <string name="title_activity_tela_reultado_hotel">ScrollingActivity</string>
</resources>